kubernetes/idsmReactDebug.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idsm-react-debug-ingress
  namespace: idsm-elixir-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - "idsm-react-debugger-1.dyn.cloud.e-infra.cz"
      secretName: idsm-react-debugger-1-dyn-cloud-e-infra-cz-tls
  rules:
    - host: "idsm-react-debugger-1.dyn.cloud.e-infra.cz"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: idsm-react-debug
                port:
                  number: 80
